adding OTU meaning

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
       <div class="col-md-5">
         <div id="bar"></div>
           <div class="well" id="otu">
-            <h4>OTU stands for</h4>
+            <h4>What does OTU mean?</h4>
             <p>
-            an operational taxonomic unit.<br> 
+            Operational Taxonomic Unit.<br> 
             <br>
-            This definition is used to classify groups of closely related individuals - microorganisms in this case.
+            Operational taxonomic unit or OTU is considered as the basic unit used in numerical taxonomy. These units may refer to an individual, species, genus, or class. In numerical methods, the taxonomic units used are constantly not comparable to the formal taxonomic units. Therefore, the term operational taxonomic unit was coined. Since data is lacking on the correct OTUs in researches, various experiments have been conducted to evaluate the clustering method performance such as the rationality of OTU structure, the ability to cope with inflation of OTU, the stability of OTU, and the computational efficiency or runtime and memory requirements.
             </p>
             <p>Source and link to the full article:
-              <a href="https://en.wikipedia.org/wiki/Operational_taxonomic_unit#:~:text=From%20Wikipedia%2C%20the%20free%20encyclopedia,originally%20introduced%20by%20Robert%20R.">Wikipedia</a>.
+              <a href="https://www.cd-genomics.com/microbioseq/operational-taxonomic-unit-otu-and-otu-clustering.html">CD Genomics-MicrobioSeq</a>.
             </p>
           </div>
       </div>
