--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>
             Operational Taxonomic Unit.<br> 
             <br>
-            Operational taxonomic unit or OTU is considered as the basic unit used in numerical taxonomy. These units may refer to an individual, species, genus, or class. In numerical methods, the taxonomic units used are constantly not comparable to the formal taxonomic units. Therefore, the term operational taxonomic unit was coined. Since data is lacking on the correct OTUs in researches, various experiments have been conducted to evaluate the clustering method performance such as the rationality of OTU structure, the ability to cope with inflation of OTU, the stability of OTU, and the computational efficiency or runtime and memory requirements.
+            Operational taxonomic unit or OTU is considered as the basic unit used in numerical taxonomy. These ufer to an individual, species, genus, or class. In numerical methods, the taxonomic units used are constantly not comparable to the formal taxonomic units.
             </p>
             <p>Source and link to the full article:
               <a href="https://www.cd-genomics.com/microbioseq/operational-taxonomic-unit-otu-and-otu-clustering.html">CD Genomics-MicrobioSeq</a>.
